--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,4 +1,5 @@
-@use "./settings";
 @use "./generalClasses";
+@use "./globalLayout";
+@use "./servicePage";
 @use "./checkBox";
 @use "./checkBox1";
