--- a/src/assets/style/_globalLayout.scss
+++ b/src/assets/style/_globalLayout.scss
@@ -15,3 +15,18 @@
   color: $white1;
   @include justify(center);
 }
+
+.main-container {
+  min-height: 75vh;
+}
+.footer {
+  background: $color1;
+  height: 5vh;
+  color: $white1;
+  @include justify(center);
+  letter-spacing: 1px;
+}
+.root {
+  height: 100vh;
+  width: 100%;
+}
