--- a/src/assets/style/_settings.scss
+++ b/src/assets/style/_settings.scss
@@ -3,6 +3,7 @@ $color1: #6600ff;
 $color2: #6699ff;
 $color3: red;
 $black1: rgb(9, 9, 9);
+$grey1: rgb(168, 168, 168);
 $white1: whitesmoke;
 
 //Fonts
