--- a/src/assets/style/_generalClasses.scss
+++ b/src/assets/style/_generalClasses.scss
@@ -63,13 +63,25 @@
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 100%);
-    width: 100%;
+    width: 95%;
+    border-radius: 0 0 10px 10px;
     background: $white1;
     flex-direction: column;
-    gap: 5px;
 
     &:hover {
       @include justify(center);
+    }
+
+    li {
+      letter-spacing: 1px;
+      padding: 10px;
+      width: 100%;
+      user-select: none;
+      text-align: center;
+
+      &:hover {
+        background: $color2;
+      }
     }
   }
 }
