--- a/src/assets/style/_generalClasses.scss
+++ b/src/assets/style/_generalClasses.scss
@@ -29,6 +29,21 @@
     border: 1px solid $color2;
     transform: scale(102%);
   }
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $color1;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.2s ease;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: $color2;
+  }
 }
 .offscreen {
   position: absolute;
