--- a/src/assets/style/_servicePage.scss
+++ b/src/assets/style/_servicePage.scss
@@ -16,6 +16,11 @@
   display: grid;
   grid-template-columns: 50% 50%;
 
+  @media screen and (max-width: 600px) {
+    grid-template-columns: 1fr;
+    gap: 100px;
+  }
+
   .grid-container {
     display: grid;
     gap: 15px;
@@ -62,10 +67,8 @@
 
   h2 {
     text-align: left;
-    font-size: 1rem;
-    letter-spacing: 1px;
-    font-family: $font2;
     margin-left: 30px;
+    @include title(1rem);
   }
 
   .category-container {
@@ -74,6 +77,7 @@
     width: 100%;
     padding: 10px;
     margin: 5px;
+    box-shadow: inset -1px 1px 4px 1px $shadow2;
 
     .service-container {
       border: 1px solid $color1;
@@ -90,9 +94,7 @@
       }
 
       h3 {
-        letter-spacing: 1px;
-        font-family: $font2;
-        font-size: 1.1rem;
+        @include title(1.1rem);
         cursor: pointer;
         margin: 10px auto;
         text-transform: capitalize;
@@ -117,10 +119,9 @@
   }
 
   h2 {
-    letter-spacing: 1px;
-    font-family: $font2;
+    @include title(1.5rem);
     @include justify(center);
-    gap: 5px;
+    gap: 15px;
     text-transform: capitalize;
 
     svg {
