--- a/src/assets/style/_servicePage.scss
+++ b/src/assets/style/_servicePage.scss
@@ -1,5 +1,5 @@
 @use "./settings" as *;
-
+//Create Service Form Structure
 .service-form-container {
   @include justify(center);
   margin-top: 25px;
@@ -11,7 +11,7 @@
     gap: 15px;
   }
 }
-
+//Create and Update Page Param Container Structure
 .param-container {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -59,7 +59,7 @@
     }
   }
 }
-
+//Service List Display Structure
 .display-service-container {
   width: 90%;
   max-width: 900px;
@@ -107,6 +107,7 @@
     }
   }
 }
+//Update Service Page Structure
 .update-form-container {
   @include justify(center);
   margin-top: 25px;
@@ -117,7 +118,7 @@
     max-width: 600px;
     gap: 15px;
   }
-
+  //Custom Title Style
   h2 {
     @include title(1.5rem);
     @include justify(center);
@@ -133,7 +134,7 @@
       }
     }
   }
-
+  //Custom Title/Input Style
   .modify-name-container {
     position: relative;
 
@@ -162,6 +163,7 @@
     }
   }
 }
+//Active Checkbox Container
 .active-service {
   @include justify(center);
   gap: 5px;
