--- a/src/assets/style/_checkbox.scss
+++ b/src/assets/style/_checkbox.scss
@@ -67,7 +67,10 @@
   --primary: #1e2235;
   --secondary: #fafbff;
   --duration: 0.5s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   -webkit-tap-highlight-color: transparent;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
   outline: none;
   cursor: pointer;
   position: relative;
@@ -266,70 +269,70 @@
   }
 }
 
-.checkbox-wrapper-43 input[type="checkbox"] {
-  display: none;
-  visibility: hidden;
-}
-
-.checkbox-wrapper-43 label {
+.checkbox-wrapper-30 .checkbox {
+  --bg: #fff;
+  --brdr: #d1d6ee;
+  --brdr-actv: #1e2235;
+  --brdr-hovr: #bbc1e1;
+  --dur: calc((var(--size, 2) / 2) * 0.6s);
   display: inline-block;
-}
-
-.checkbox-wrapper-43 .check {
-  cursor: pointer;
+  width: calc(var(--size, 1) * 22px);
   position: relative;
-  margin: auto;
-  width: 18px;
-  height: 18px;
-  -webkit-tap-highlight-color: transparent;
-  transform: translate3d(0, 0, 0);
 }
-.checkbox-wrapper-43 .check:before {
+.checkbox-wrapper-30 .checkbox:after {
   content: "";
-  position: absolute;
-  top: -15px;
-  left: -15px;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  background: rgba(34, 50, 84, 0.03);
-  opacity: 0;
-  transition: opacity 0.2s ease;
+  width: 100%;
+  padding-top: 100%;
+  display: block;
 }
-.checkbox-wrapper-43 .check svg {
-  position: relative;
-  z-index: 1;
+.checkbox-wrapper-30 .checkbox > * {
+  position: absolute;
+}
+.checkbox-wrapper-30 .checkbox input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+  background-color: var(--bg);
+  border-radius: calc(var(--size, 1) * 4px);
+  border: calc(var(--newBrdr, var(--size, 1)) * 1px) solid;
+  color: var(--newBrdrClr, var(--brdr));
+  outline: none;
+  margin: 0;
+  padding: 0;
+  transition: all calc(var(--dur) / 3) linear;
+}
+.checkbox-wrapper-30 .checkbox input:hover,
+.checkbox-wrapper-30 .checkbox input:checked {
+  --newBrdr: calc(var(--size, 1) * 2);
+}
+.checkbox-wrapper-30 .checkbox input:hover {
+  --newBrdrClr: var(--brdr-hovr);
+}
+.checkbox-wrapper-30 .checkbox input:checked {
+  --newBrdrClr: var(--brdr-actv);
+  transition-delay: calc(var(--dur) / 1.3);
+}
+.checkbox-wrapper-30 .checkbox input:checked + svg {
+  --dashArray: 16 93;
+  --dashOffset: 109;
+}
+.checkbox-wrapper-30 .checkbox svg {
   fill: none;
+  left: 0;
+  pointer-events: none;
+  stroke: var(--stroke, var(--border-active));
+  stroke-dasharray: var(--dashArray, 93);
+  stroke-dashoffset: var(--dashOffset, 94);
   stroke-linecap: round;
   stroke-linejoin: round;
-  stroke: #c8ccd4;
-  stroke-width: 1.5;
-  transform: translate3d(0, 0, 0);
-  transition: all 0.2s ease;
+  stroke-width: 2px;
+  top: 0;
+  transition: stroke-dasharray var(--dur), stroke-dashoffset var(--dur);
 }
-.checkbox-wrapper-43 .check svg path {
-  stroke-dasharray: 60;
-  stroke-dashoffset: 0;
-}
-.checkbox-wrapper-43 .check svg polyline {
-  stroke-dasharray: 22;
-  stroke-dashoffset: 66;
-}
-.checkbox-wrapper-43 .check:hover:before {
-  opacity: 1;
-}
-.checkbox-wrapper-43 .check:hover svg {
-  stroke: #4285f4;
-}
-.checkbox-wrapper-43 input[type="checkbox"]:checked + .check svg {
-  stroke: #4285f4;
-}
-.checkbox-wrapper-43 input[type="checkbox"]:checked + .check svg path {
-  stroke-dashoffset: 60;
-  transition: all 0.3s linear;
-}
-.checkbox-wrapper-43 input[type="checkbox"]:checked + .check svg polyline {
-  stroke-dashoffset: 42;
-  transition: all 0.2s linear;
-  transition-delay: 0.15s;
+.checkbox-wrapper-30 .checkbox svg,
+.checkbox-wrapper-30 .checkbox input {
+  display: block;
+  height: 100%;
+  width: 100%;
 }
