--- a/src/assets/style/_settings.scss
+++ b/src/assets/style/_settings.scss
@@ -9,6 +9,15 @@ $white1: rgb(245, 245, 245);
 $shadow1: rgba(9, 9, 9, 0.39);
 $shadow2: rgba(168, 168, 168, 0.486);
 $shadow3: rgba(245, 245, 245, 0.486);
+$colOpt1: #ffff00;
+$colOpt2: #ff66cc;
+$colOpt3: #ff6600;
+$colOpt4: #ff0000;
+$colOpt5: #9966cc;
+$colOpt6: #00ff00;
+$colOpt7: #66ccff;
+$colOpt8: #0066ff;
+$colOpt9: #0000cc;
 //Fonts
 @font-face {
   font-family: "font1";
