--- a/src/assets/style/_globalLayout.scss
+++ b/src/assets/style/_globalLayout.scss
@@ -1,35 +1,69 @@
 @use "./settings" as *;
 
-.header {
-  clip-path: polygon(
-    0% 0%,
-    100% 0%,
-    100% 75%,
-    45% 75%,
-    30% 100%,
-    0% 100%,
-    0% 75%
-  );
-  background: $color1;
-  height: 20vh;
-  color: $white1;
-  @include justify(center);
+.layout-container {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 20vh 1fr 5vh;
+  grid-template-areas:
+    "side header"
+    "side main"
+    "side footer";
 
-  h1 {
-    @include title(2rem);
-    text-shadow: 1px 2px 5px $shadow3;
+  .header {
+    grid-area: header;
+    clip-path: polygon(
+      0% 0%,
+      100% 0%,
+      100% 75%,
+      45% 75%,
+      30% 100%,
+      0% 100%,
+      0% 75%
+    );
+    background: $color1;
+    height: 20vh;
+    color: $white1;
+    @include justify(center);
+
+    h1 {
+      @include title(2rem);
+      text-shadow: 1px 2px 5px $shadow3;
+    }
   }
-}
+  .main-nav {
+    grid-area: side;
+    background: $color1;
 
-.main-container {
-  min-height: 75vh;
-}
-.footer {
-  background: $color1;
-  height: 5vh;
-  color: $white1;
-  @include justify(center);
-  letter-spacing: 1px;
+    ul {
+      @include justify(center);
+      flex-direction: column;
+      height: 100vh;
+      gap: 20px;
+    }
+
+    svg {
+      font-size: 1.5rem;
+    }
+
+    a,
+    a:visited {
+      color: $white1;
+      text-decoration: none;
+      @include title(1.1rem);
+    }
+  }
+  .main-container {
+    min-height: 75vh;
+    grid-area: main;
+  }
+  .footer {
+    grid-area: footer;
+    background: $color1;
+    height: 5vh;
+    color: $white1;
+    @include justify(center);
+    letter-spacing: 1px;
+  }
 }
 .root {
   height: 100vh;
