--- a/src/assets/style/_globalLayout.scss
+++ b/src/assets/style/_globalLayout.scss
@@ -50,6 +50,7 @@
       color: $white1;
       text-decoration: none;
       @include title(1.1rem);
+      text-shadow: 1px 2px 5px $shadow3;
     }
   }
   .main-container {
