added all create role structure

--- a/src/assets/style/_colorClass.scss
+++ b/src/assets/style/_colorClass.scss
@@ -1,29 +1,29 @@
 @use "./settings" as *;
 
 .colOpt1 {
-  color: $colOpt1;
+  background: $colOpt1;
 }
 .colOpt2 {
-  color: $colOpt2;
+  background: $colOpt2;
 }
 .colOpt3 {
-  color: $colOpt3;
+  background: $colOpt3;
 }
 .colOpt4 {
-  color: $colOpt4;
+  background: $colOpt4;
 }
 .colOpt5 {
-  color: $colOpt5;
+  background: $colOpt5;
 }
 .colOpt6 {
-  color: $colOpt6;
+  background: $colOpt6;
 }
 .colOpt7 {
-  color: $colOpt7;
+  background: $colOpt7;
 }
 .colOpt8 {
-  color: $colOpt8;
+  background: $colOpt8;
 }
 .colOpt9 {
-  color: $colOpt9;
+  background: $colOpt9;
 }
