--- a/src/assets/style/_settings.scss
+++ b/src/assets/style/_settings.scss
@@ -3,6 +3,7 @@ $color1: rgb(55, 0, 255);
 $color2: rgb(27, 132, 252);
 $color3: rgb(130, 205, 255);
 $color4: rgb(214, 20, 20);
+$color5: rgb(9, 224, 37);
 $black1: rgb(9, 9, 9);
 $grey1: rgb(168, 168, 168);
 $white1: rgb(245, 245, 245);
